# type

./: CMakeLists.txt  LICENSE
include/libsharaku/type/: digital-filter.hpp  pid.hpp  position.hpp  rotation.hpp  vector.hpp
test/linux/: gtest_digital-filter.cpp  gtest_pid.cpp  gtest_position.cpp  gtest_rotation.cpp  gtest_vector.cpp
